# sila_cetoni_application

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
sila_cetoni/application/: __init__.py  __main__.py  application.py  application_configuration.py  cetoni_device_configuration.py  config.py  configuration.py  device.py  server_configuration.py  singleton.py  system.py
sila_cetoni/application/resources/: configuration_schema.json
sila_cetoni_application/: application.py
