[project]
name = "sila_cetoni_application"
version = "1.8.0"
description = "CETONI main application for all SiLA 2 implementations"
readme = "README.md"
authors = [
    { name = "CETONI GmbH", email = "info@cetoni.de" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.8"
dependencies = [
    "coloredlogs",
    "jsonschema",
    "pyserial",
    "sila2[codegen]==0.10.1",
    "typer"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[project.scripts]
sila-cetoni = "sila_cetoni.application.__main__:app"

[project.urls]
"Homepage" = "https://cetoni.de/cobomation/#sila"
"SiLA Standard" = "https://sila-standard.org"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.sila.xml"]
"sila_cetoni.application.resources" = ["configuration_schema.json"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
