[project]
name = "sila_cetoni.application"
description = "CETONI main application for all SiLA 2 implementations"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "CETONI GmbH", email = "info@cetoni.de" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.8"
dependencies = [
    "coloredlogs",
    "isodate",
    "jsonschema",
    "pyserial",
    "safer",
    "sila2[codegen]==0.10.1",
    "typer"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[project.scripts]
sila-cetoni = "sila_cetoni.application.__main__:app"

[project.urls]
"Homepage" = "https://cetoni.de/cobomation/#sila"
"SiLA Standard" = "https://sila-standard.org"

# dynamic version from git
[tool.setuptools_scm]
# include timestamp for dirty workdir versions
local_scheme = "node-and-timestamp"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.sila.xml", "configuration_schema.json"]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
